# rpi-setup

./: .ansible-lint  .env  .gitattributes  .gitignore  .hadolint.yaml  .yamllint  README.md  ansible.cfg  download-archlinuxarm.sh  download-rpi-os.sh  download-ubuntu.sh  find-raspberry.sh  pyproject.toml  requirements.yaml  setup.sh  update_user.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yaml
inventory/: inventory-sample.yaml
molecule/default/: converge.yaml  molecule.yaml  prepare.yaml  verify.yaml
molecule/poe-hat/: converge.yaml  molecule.yaml  verify.yaml
molecule/poe-hat-plus/: converge.yaml  molecule.yaml  verify.yaml
playbooks/: enable-poe-hat-plus.yaml  enable-poe-hat.yaml  rename-user.yaml
ssh/: id_ed25519.pub
tasks/: insert-update-poe-hat-config.yaml
vars/: main.yaml
